# jacky-skills-package

./: .gitignore  .npmignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  README_CN.md  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  test-tauri-commands.sh  tsconfig.e2e.json  tsconfig.json  tsup.config.ts  vitest.config.ts  wdio.tauri.conf.ts
.github/workflows/: publish-extension.yml  publish.yml
docs/: dmg-build-analysis.md  e2e-test-report.md  github-publish-report.md  l1-l8-gates-explained.md  tauri-migration-complete.md  tauri-migration-summary.md  v0.3.0-final-summary.md  version-0.3.0-release.md  version-update-0.3.0.md
docs/plans/: 2026-03-04-gui-web-design.md  2026-03-05-source-folders-and-export-design.md  2026-03-05-source-folders-and-export-implementation.md  2026-03-05-tauri-migration-design.md  2026-03-05-tauri-migration-implementation.md  monitor-redesign.md
docs/reference/: hooks-merge.md  (+7 more)
e2e/: tauri-smoke.spec.ts
memory-bank/: activeContext.md  feature-list.json  progress.md  projectbrief.md
pencil/: monitor.pen
scripts/: check-registry-health.py
src/: index.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: claudemd.rs  config.rs  mod.rs  monitor.rs  profiles.rs  skills.rs  update.rs
src-tauri/src/models/: config.rs  mod.rs  skill.rs
src-tauri/src/services/: config.rs  hooks.rs  mod.rs  registry.rs  registry_watcher.rs
src-tauri/src/utils/: mod.rs  paths.rs
src-tauri/tests/: skills_smoke.rs
web/: package.json  tsconfig.json  vite.config.ts
(+136 files in other folders)
